[package]
name = "bt_http_utils"
version = "0.1.0"
edition = "2021"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "A simple HTTP wrapper to simplify POST and GET calls."
keywords = ["http","client"]
categories = ["web-programming::http-server","web-programming::http-client","web-programming"]
repository = "https://github.com/bachuetech/bt_http_utils"
readme = "README.md"
homepage = "https://github.com/bachuetech/bt_http_utils"
license = "GPL-3.0-only"

[dependencies]
bt_logger = "0.2.1"
reqwest = {version ="0.12.12", features = ["json","hickory-dns"] }
tokio = { version = "1.43.0", features = ["full"] }
